# trading-bot

./: .env.example  .gitignore  00_ARQUITECTURA.md  01_ESTRATEGIA_DATOS.md  CLAUDE.md  anexo_ii_sectores_eventos.md  anexo_iii_dinero_real.md  cofer_usd.csv  cofer_yen.csv  guia_campo_resumen_completo.md  informe_macro_correlaciones.md  pyproject.toml  requirements.txt
.github/workflows/: daily-pipeline.yml
sql/: init_tables.sql
src/: config.py  ibkr.py  notifications.py  pipeline.py  portfolio.py  report.py  risk.py  scanner.py  settings.py  tracker.py
src/data/: fred_client.py  supabase_client.py  yfinance_client.py
src/models/: enums.py
src/signals/: base.py  canary.py  crypto_composite.py  dual_momentum.py  fed_regime.py  liquidity.py  oil_shock.py  orchestrator.py  usd_trend.py  vix_regime.py
