[project]
name = "trading-bot"
version = "0.1.0"
description = "Sistema multi-activo semi-automático con 8 señales tácticas"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "supabase>=1.0.0",
    "requests>=2.28.0",
    "python-telegram-bot>=20.0",
]

[project.scripts]
trading-bot = "src.pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
